--- a/css/styles.css
+++ b/css/styles.css
@@ -84,12 +84,12 @@ main::-webkit-scrollbar {
 @media (min-aspect-ratio: 16/9){
 	.back-video {
 		width: 100%;
-    	height: 100%;
+		height: auto;
 	}
 }
 @media (max-aspect-ratio: 16/9){
 	.back-video {
-		width: 100%;
+		width: auto;
 		height: 100%;
 	}
 }
