--- a/css/styles.css
+++ b/css/styles.css
@@ -93,6 +93,15 @@ main::-webkit-scrollbar {
 		height: 100%;
 	}
 }
+/*Parallax*/
+.section{
+	position: fixed;
+	width: 100%; height: 100%; top: 0; left: 0;
+  animation: 1s linear;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
 /* ********************************** */
 /*               MODAL               */
 /* ********************************** */
@@ -2947,6 +2956,9 @@ header .menu-icon .section-title {
 /*       MEDIA QUERIES -- 500px       */
 /* ********************************** */
 @media (max-width: 500px) {
+	.footer {
+		margin-bottom: 1rem;
+	}
 	.loader img{
 		width: 300px;
 	}
@@ -2990,7 +3002,9 @@ header .menu-icon .section-title {
     	row-gap: 2rem;
 	}
 		
-	
+	.menu.show .contact-block a {
+		margin-bottom: 2rem;
+	}
 	.menuItems .social-buttons a li{
 		line-height: 20px;
 		font-size: 20px;
@@ -3009,13 +3023,13 @@ header .menu-icon .section-title {
 		margin-bottom: 0;
 	}
 	.home-bottom .home-bottom-text{
-		padding: 20rem 4rem 0;
+		padding: 15rem 2rem 0;
 		justify-content: start;
 		row-gap: 2rem;
 	}
 	.home-bottom .home-bottom-text h1{
-		font-size: 24px;
-    	line-height: 24px;
+		font-size: 42px;
+    	line-height: 42px;
 	}
 	
 	.home-bottom .home-bottom-text h1 span{
@@ -3025,65 +3039,20 @@ header .menu-icon .section-title {
 		display: none;
 	}
 	.home-bottom .home-bottom-text p{
-		font-size: 14px;
-    	line-height: 14px;
-		padding: 2rem 4rem;
+		font-size: 18px;
+		line-height: normal;
+		padding: 2rem;
 	}
 
 	.home-bottom .home-bottom-text .discover-more a{
-		font-size: 20px;
-		line-height: 28px;
-		padding: 1rem 2rem;
-		width: 150px;
+		font-size: 24px;
+		line-height: normal;
+		padding: 0.5rem 2rem;
+		width: 240px;
 	}
 	.home-bottom .home-bottom-text .discover-more a:hover, 
 	.home-bottom .home-bottom-text .discover-more a:focus{ 	
-		box-shadow: inset 150px 0 0 0 #000;
-	}
-	.home-bottom .home-bottom-text .circle {
-		width: 150px;
-		left: 1rem;
-		bottom: 5rem;
-	}
-	.home-bottom .home-bottom-text .building {
-		width: 130px;
-		left: 2rem;
-		bottom: 4rem;
-	}	
-	.home-bottom .home-bottom-text .square {
-		width: 160px;
-		right: 0rem;
-		bottom: 14rem;
-	}
-	.home-bottom .home-bottom-text .pc {
-		width: 200px;
-		right: 0rem;
-		bottom: 6rem;
-	}
-	.home-bottom .home-bottom-text .eagle {
-		width: 120px;
-		left: 4rem;
-		top: 12rem;
-	}
-	.home-bottom .home-bottom-text .moon {
-		width: 60px;
-		right: 4rem;
-		top: 12rem;
-	}
-	.home-bottom .home-bottom-text .star1 {
-		top: 28rem;
-		width: 50px;
-		left: 4rem;
-	}
-	.home-bottom .home-bottom-text .star2 {
-		width: 50px;
-		right: 2rem;
-		bottom: 40rem;
-	}
-	.home-bottom .home-bottom-text .dot {
-		bottom: 34rem;
-		width: 20px;
-		left: 5rem;
+		box-shadow: inset 240px 0 0 0 #000;
 	}
 	/*MINI SECTION*/
 	.mini-section-container {
@@ -3147,21 +3116,22 @@ header .menu-icon .section-title {
 	}
 	/* ABOUT SECOND   */
 	.about-second .about-second-text{
-		padding: 12rem 2rem 1rem;
+		padding: 15rem 2rem 0;
 		justify-content: start;
+		row-gap: 2rem;
 	}
 	.about-second .about-second-text h1{
-		font-size: 28px;
-		line-height: 32px;
+		font-size: 38px;
+    	line-height: 38px;
 	}
 	.about-second .about-second-text h4{
-		font-size: 16px;
-		line-height: 20px;
+		font-size: 30px;
+    	line-height: normal;
 		padding: 0;
 	}
 	.about-second .about-second-text p{
-		font-size: 12px;
-		line-height: 14px;
+		font-size: 18px;
+    	line-height: normal;
 	}
 	.about-second .about-second-button{
 		padding-bottom: 2rem;
@@ -3171,30 +3141,38 @@ header .menu-icon .section-title {
 		padding: 2rem 2rem;
 	}
 	.about-second .about-second-text .text-wrapper {
-		row-gap: 0.25rem;
+		row-gap: 0.5rem;
 		padding: 0;
 		column-gap: 1rem;
+		height: 150px;
+		overflow: scroll;
+		flex-direction: column;
+		padding: 2rem;
+		margin: 0 4rem;
+	}
+	.about-second .about-second-more {
+		margin-top: 2rem;
 	}
 	.about-second .about-second-more a {
-		font-size: 16px;
-		line-height: 20px;
+		font-size: 24px;
+		line-height: normal;
 		padding: 1rem 0rem;
-		width: 200px;
+		width: 250px;
 	}
 	/*  ABOUT THIRD  */
 	.about-third .about-third-text{
-		padding: 12rem 4rem 0rem;
+		padding: 15rem 2rem 0rem;
 		row-gap: 2rem;
-		justify-content: center;
+		justify-content: start;
 	}
 	.about-third .about-third-text h1{
-		font-size: 32px;
-		line-height: 34px;
+		font-size: 38px;
+    	line-height: 38px;
 	}
 
 	.about-third .about-third-text p{
-		font-size: 20px;
-		line-height: 28px;
+		font-size: 24px;
+    	line-height: normal;
 	}
 	.about-third .about-third-button{
 		padding-bottom: 2rem;
@@ -3205,21 +3183,21 @@ header .menu-icon .section-title {
 	}
 	/*Carousel*/
 	.about-third .wrapper{
-		padding: 0 5rem 4rem;
-    	margin-bottom: 15rem;
+		padding: 0 8rem 4rem;
+    	margin-bottom: 10rem;
 	}
 	.about-third .carousel__control--backward {
-		left: 1rem;
+		left: 2rem;
 	}
 	.about-third .carousel__control--forward {
-		right: 5rem;
+		right: 7rem;
 	}
 	.about-third .carousel img{
-		height: 200px;
-		width: 130px;
+		height: 340px;
+    	width: 200px;
 	}  
 	.about-third .carousel .team-item{
-		margin-left: 10px;
+		margin-left: 20px;
 	}
 	.about-third .carousel .team-item .team-more {
 		bottom: 2rem;
@@ -3232,36 +3210,42 @@ header .menu-icon .section-title {
 		font-size: 8px;
 	}
 	.about-third .carousel__control svg {
-		width: 20px;
-	}
-	/*TEAM SECTION*/
-	.team .team-text {
-
+		width: 30px;
 	}
 	/*SERVICES*/
 	.services .services-text{
-		padding: 10rem 4rem;
-		row-gap: 1rem;
+		padding: 15rem 2rem;
+		row-gap: 2rem;
 	}
 	.services .services-text .text-wrapper {
-		padding-top: 1rem;
+		row-gap: 0.5rem;
 		column-gap: 1rem;
+		height: 200px;
+		overflow: scroll;
+		flex-direction: column;
+		padding: 2rem;
+		margin: 0 2rem;
+		padding-top: 1rem;
+		text-align: center;
 	}
 	.services .services-text .text-wrapper .text-content {
 		row-gap: 1rem;
 	}
+	.services .services-text .service-wrapper {
+		margin-top: 0rem;
+	}
 	.services .services-text h1{
-		font-size: 24px;
-		line-height: 28px;
+		font-size: 38px;
+    	line-height: 38px;
 	}
 	.services .services-text h4{
-		font-size: 20px;
-		line-height: 28px;
+		font-size: 30px;
+    	line-height: normal;
 	}
 	
 	.services .services-text p{
-		font-size: 12px;
-		line-height: 14px;
+		font-size: 18px;
+    	line-height: normal;
 	}
 	
 	.service.first .icon{
@@ -3319,55 +3303,63 @@ header .menu-icon .section-title {
 	
 	/*WORK*/
 	.work .work-text{
-		padding: 10rem 4rem 2rem;
+		padding: 15rem 2rem;
+		padding-bottom: 4rem;
 	}
 	.work .work-text h1{
-		font-size: 28px;
-    	line-height: 30px;
+		font-size: 38px;
+    	line-height: 38px;
 	}
 	.work .work-text h4{
-		font-size: 20px;
-		line-height: 28px;
+		font-size: 30px;
+		line-height: normal;
 	}
 	.work .work-text .work-filter a li {
 		line-height: 14px;
 		font-size: 12px;
 		padding: 1rem 0.25rem;
 	}
-
-	/*Carousel Slider 3D*/
+	
+	/*Carousel Slider 3D*/	  
+	.work .gallery {
+		padding-bottom: 12rem;
+	}
 	.work .gallery-container {
-		height: 250px;
-		max-width: 350px;
-	}
-	
+		height: 300px;
+    	max-width: 350px;
+	  }
+	  
 	.work  .gallery-item {
-		height: 150px;
-		width: 170px;
-	}
-		
+		height: 150px !important;
+		width: 170px !important;
+	  }
 	.work .gallery-item-2, .work .gallery-item-4 {
-		height: 160px;
-		width: 200px;
+		height: 160px !important;
+		width: 200px !important;
+		left: 50% !important;
+	}	
+	.work .gallery-item-1 {
+		left: 35% !important;
+	}		
+	.work .gallery-item-5 {
+		left: 60% !important;
 	}
-		
 	.work .gallery-item-3 {
-		height: 200px;
-		width: 250px;
-	}
-	
+		height: 300px !important;
+    	width: 280px !important;
+	  }
 	.work .next-button, .work .back-button {
 		padding: 1.25rem 0.5rem;
 		z-index: 1;
-	}
-	
+	  }
+	  
 	.work .next-button {
-		right: -2rem;
-	}
-	
+		right: -1rem;
+	  }
+	  
 	.work .back-button {
-		left: -2rem;
-	}	
+		left: -1rem;
+	}
 	
 	/*Carousel*/
 	.work .wrapper{
@@ -3391,15 +3383,15 @@ header .menu-icon .section-title {
 
 	/*BLOG*/
 	.blog .blog-text{
-		padding: 10rem 4rem 2rem;
+		padding: 15rem 2rem 2rem;
 	}
 	.blog .blog-text h1{
-		font-size: 28px;
-    	line-height: 32px;
+		font-size: 39px;
+    	line-height: 38px;
 	}
 	.blog .blog-text h4{
-		font-size: 20px;
-		line-height: 28px;
+		font-size: 28px;
+		line-height: normal;
 	}
 	.blog .blog-text .blog-filter a li {
 		line-height: 14px;
@@ -3409,7 +3401,7 @@ header .menu-icon .section-title {
 	
 	/*Gallery*/
 	.blog .gallerry-wrapper {
-		padding-bottom: 10rem;
+		padding-bottom: 15rem;
 		flex-direction: column;
 	}
 	
@@ -3453,34 +3445,34 @@ header .menu-icon .section-title {
 	}
 	/*CONTACT US*/
 	.contactus .contactus-text{
-		padding: 12rem 4rem;
+		padding: 15rem 2rem;
 	}
 	.contactus .contactus-text h1{
-		font-size: 28px;
-		line-height: 32px;
+		font-size: 38px;
+		line-height: 38px;
 	}
 	.contactus .contactus-text h4{
-		font-size: 20px;
-		line-height: 28px;
+		font-size: 28px;
+		line-height: normal;
 	}
 	
 	.contactus .contactus-text p{
-		font-size: 14px;
-		line-height: 20px;
+		font-size: 18px;
+		line-height: normal;
 	}
 	.contactus .contactus-text .contactus-more{
 		padding: 1rem;
 	}
 	
 	.contactus .contactus-text .contactus-more a{
-		font-size: 14px;
-		line-height: 18px;
+		font-size: 18px;
+		line-height: normal;
 		padding: 1rem;
 		border-radius: 50px;
 		display: flex;
 		justify-content: center;
 		align-items: center;
-		width: 150px;
+		width: 250px;
 	}
 	.contactus .contactus-text .contactus-more a span {
 		display: flex;
@@ -3515,15 +3507,15 @@ header .menu-icon .section-title {
 
 	/*LOCATION*/
 	.location .location-text{
-		padding: 12rem 4rem;
+		padding: 15rem 2rem;
 	}
 	.location .location-text h1{
-		font-size: 32px;
+		font-size: 38px;
 		line-height: 38px;
 	}
 	.location .location-text p{
-		font-size: 18px;
-		line-height: 28px;
+		font-size: 28px;
+		line-height: normal;
 	}
 
 	/*FOOTER FAKE*/
@@ -3563,50 +3555,57 @@ header .menu-icon .section-title {
 
 	/*Team section*/
 	.team .team-text{
-		padding: 12rem 4rem;
+		padding: 15rem 2rem;
+		padding-bottom: 8rem;
 	}
 	.team .team-text h1{
-		font-size: 32px;
-		line-height: 34px;
+		font-size: 38px;
+    	line-height: 38px;
 	}
 	.team .team-text h4{
 		font-size: 20px;
 		line-height: 24px;
+		padding: 0 4rem;
 	}
 	
 	/*Carousel Slider 3D*/	  
+	.team .gallery-team {
+		padding-bottom: 10rem;
+	}
 	.team .gallery-container-team {
-		height: 250px;
-		max-width: 350px;
+		height: 300px;
+    	max-width: 350px;
 	  }
 	  
 	.team  .gallery-item-team {
-		height: 150px;
-		width: 170px;
+		height: 150px !important;
+		width: 170px !important;
 	  }
-	  
-	  
 	.team .gallery-item-team-2, .team .gallery-item-team-4 {
-		height: 160px;
-		width: 200px;
-	  }	  
-	  
+		height: 160px !important;
+		width: 200px !important;
+		left: 50% !important;
+	}	
+	.team .gallery-item-team-1 {
+		left: 35% !important;
+	}		
+	.team .gallery-item-team-5 {
+		left: 60% !important;
+	}
 	.team .gallery-item-team-3 {
-		height: 200px;
-		width: 250px;
+		height: 300px !important;
+    	width: 280px !important;
 	  }
-	  
-	  
 	.team .next-button, .team .back-button {
 		padding: 1.25rem 0.5rem;
 		z-index: 1;
 	  }
 	  
 	.team .next-button {
-		right: -2rem;
+		right: -1rem;
 	  }
 	  
 	.team .back-button {
-		left: -2rem;
+		left: -1rem;
 	  }
 }
