--- a/css/styles.css
+++ b/css/styles.css
@@ -1255,6 +1255,58 @@ header .menu-icon .section-title {
 	margin-left: 2rem;
 }
 /* ********************************** */
+/*               ABOUT COVER          */
+/* ********************************** */
+.about-cover {
+	/* background: #07184A;  */
+    height: 100vh;
+	/* background-image: url('../images/about/third_back.png');*/
+	background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover; 
+	position: relative;
+}
+.about-cover::before {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: #07184A; /* Adjust the alpha value for darkness */
+	z-index: 0;
+	opacity: 0.5;
+}
+.about-cover-wrapper {
+	display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+.about-cover .about-cover-text{
+	width: 100%;
+    height: 100%;
+    padding: 15rem 50rem 25rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+	row-gap: 2rem;
+	color: #fff;
+}
+.about-cover .about-cover-text h1{
+	font-weight: 700;
+	font-size: 62px;
+	line-height: 72px;
+	text-transform: uppercase;
+}
+
+.about-cover .about-cover-text p{
+	font-weight: 400;
+	font-size: 48px;
+	line-height: 45px;
+	text-transform: inherit;
+}
+/* ********************************** */
 /*               ABOUT THIRD          */
 /* ********************************** */
 .about-third {
@@ -1274,13 +1326,16 @@ header .menu-icon .section-title {
 .about-third .about-third-text{
 	width: 100%;
     height: 100%;
-    padding: 15rem 50rem 5rem;
+    padding: 15rem 50rem 0;
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: center;
     text-align: center;
 	row-gap: 2rem;
 	color: #fff;
+}
+.about-cover-text {
+	padding-bottom: 25rem;
 }
 .about-third .about-third-text h1{
 	font-weight: 700;
@@ -2486,6 +2541,20 @@ header .menu-icon .section-title {
 }
 .footer .white_scroll {
 	display: block;
+}
+.footer .discover {
+	position: absolute;
+    top: -11rem;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    color: #fff;
+	display: none;
+}
+.footer .footer-line {
+	position: absolute;
+    top: -8rem;
 }
 /*
 .footer .mouseActive{
