--- a/css/styles.css
+++ b/css/styles.css
@@ -96,6 +96,7 @@ main::-webkit-scrollbar {
 	z-index: -1;
 	min-width: 100%;
     min-height: 100%;
+	height: 100vh;
 }
 /*Parallax*/
 .section{
@@ -2430,6 +2431,16 @@ header .menu-icon .section-title {
     background-size: cover; */
 	overflow: hidden;
 }
+.location::before {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.2); /* Adjust the alpha value for darkness */
+	z-index: 0;
+}
 .location .location-text{
 	width: 100%;
     height: 100%;
@@ -2447,14 +2458,14 @@ header .menu-icon .section-title {
 	font-size: 62px;
 	line-height: 72px;
 	text-transform: uppercase;
-	color: #000;
+	color: #fff;
 }
 .location .location-text p{
 	font-weight: 400;
 	font-size: 32px;
 	line-height: 35px;
 	text-transform: inherit;
-	color: #000;
+	color: #fff;
 }
 .location .location-text .location-more{
 	display: flex;
