--- a/css/styles.css
+++ b/css/styles.css
@@ -96,7 +96,7 @@ main::-webkit-scrollbar {
 	z-index: -1;
 	min-width: 100%;
     min-height: 100%;
-	height: 100vh;
+	/*height: 100vh;*/
 }
 /*Parallax*/
 .section{
