--- a/css/styles.css
+++ b/css/styles.css
@@ -94,18 +94,28 @@ main::-webkit-scrollbar {
 	right: 0;
 	bottom: 0;
 	z-index: -1;
-	min-width: 100%;
-    min-height: 100%;
-	/*height: 100vh;*/
+}
+@media (min-aspect-ratio: 16/9){
+	.back-video {
+		width: 100%;
+		height: auto;
+	}
+}
+@media (max-aspect-ratio: 16/9){
+	.back-video {
+		width: auto;
+		height: 100%;
+	}
 }
 /*Parallax*/
 .section{
 	position: fixed;
 	width: 100%; height: 100%; top: 0; left: 0;
-  animation: 1s linear;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center center;
+  	animation: 1s linear;
+  	background-size: cover;
+  	background-repeat: no-repeat;
+  	background-position: center center;
+	overflow: hidden;
 }
 /* ********************************** */
 /*               MODAL               */
@@ -628,14 +638,6 @@ header .menu-icon .section-title {
 	background-color: rgba(0, 0, 0, 0.3); /* Adjust the alpha value for darkness */
 	z-index: 0;
 }
-.home-bottom .video-wrapper{
-	position: absolute;
-    height: 30%;
-    width: 100%;
-    bottom: 0;
-    left: 0;
-    overflow: hidden;
-}
 .home-bottom .home-video{
 	position: absolute;
     bottom: 0;
@@ -694,99 +696,6 @@ header .menu-icon .section-title {
 	border: 1px solid #fff;
     border-radius: 100%;
     padding: 3rem 4.25rem;
-}
-.home-bottom .home-bottom-text .square{
-	position: absolute;
-    width: 360px;
-    right: 0;
-    bottom: 16rem;
-}
-.home-bottom .home-bottom-text .pc{
-	position: absolute;
-    width: 420px;
-    right: -5rem;
-    bottom: 6rem;
-}
-.home-bottom .home-bottom-text .circle {
-	position: absolute;
-    width: 330px;
-    left: 2rem;
-    bottom: 5rem;
-}
-.home-bottom .home-bottom-text .building {
-	position: absolute;
-    width: 280px;
-    left: 6rem;
-    bottom: 4rem;
-}
-.home-bottom .home-bottom-text .eagle {
-	position: absolute;
-    width: 210px;
-    left: 12rem;
-    top: 26rem;
-	-webkit-animation: move 2s infinite  alternate;
-    animation: move 2s infinite  alternate;
-}
-.home-bottom .home-bottom-text .moon {
-	position: absolute;
-    width: 130px;
-    right: 22rem;
-    top: 18rem;
-    animation: zoom-in-zoom-out 2s ease infinite;
-}
-.home-bottom .home-bottom-text .star1 {
-	top: 18rem;
-    position: absolute;
-    width: 85px;
-    left: 58rem;
-	animation: zoom-in-zoom-out 1s ease infinite;
-}
-.home-bottom .home-bottom-text .star2 {
-	position: absolute;
-    width: 85px;
-    right: 20rem;
-    bottom: 38rem;
-	animation: zoom-in-zoom-out 1s ease infinite;
-}
-.home-bottom .home-bottom-text .dot {
-	bottom: 34rem;
-    position: absolute;
-    width: 28px;
-    left: 58rem;
-	animation: bounce 2s infinite;
-	-webkit-animation: bounce 2s infinite;
-	-moz-animation: bounce 2s infinite;
-	-o-animation: bounce 2s infinite;
-}
-.home-bottom .home-bottom-text .dessert {
-	bottom: 0;
-    position: absolute;
-    width: 100%;
-    left: 0;
-	transform: translateY(200px);
-	transition: all 0.6s ease-in; 
-	opacity: 0;
-	
-}
-.home-bottom .home-bottom-text .cactus1 {
-	bottom: -2rem;
-    position: absolute;
-    width: 120px;
-    left: 40rem;
-    z-index: 1;
-	transform: translateY(200px);
-	transition: all 1s ease-in; 
-	opacity: 0;
-}
-.home-bottom .home-bottom-text .cactus2 {
-	bottom: 10rem;
-    position: absolute;
-    width: 100px;
-    right: 30rem;
-    z-index: 1;
-	transform: translateY(300px);
-	transition: all 1.3s ease-in; 
-	opacity: 0;
 }
 .home-bottom .home-bottom-text .discover-more{
 	display: flex;
@@ -2619,21 +2528,6 @@ header .menu-icon .section-title {
 		font-size: 40px;
 		line-height: 50px;
 	}
-	.home-bottom {
-		margin-bottom: 300px;
-	}
-	.mini-section-container {
-		height: 300px;
-	}
-	.mini-section-container .square{
-		width: 280px;
-		right: 50rem;
-	}
-	.mini-section-container .pc{
-		bottom: -22rem;
-		width: 400px;
-	}
-
 	.home-bottom .home-bottom-text p{
 		font-size: 18px;
 		line-height: 30px;
@@ -3172,22 +3066,6 @@ header .menu-icon .section-title {
 	.home-bottom .home-bottom-text .discover-more a:hover, 
 	.home-bottom .home-bottom-text .discover-more a:focus{ 	
 		box-shadow: inset 240px 0 0 0 #000;
-	}
-	/*MINI SECTION*/
-	.mini-section-container {
-		height: 20%;
-	}
-	.mini-section-container .square{
-		width: 220px;
-		right: 5rem;
-		bottom: -1rem;
-	}
-	.mini-section-container .pc{
-		bottom: -17rem;
-		width: 300px;
-	}
-	.mini-section-container .mini-section-back {
-		display: none;
 	}
 	/*  ABOUT US  */
 	.aboutus .about-text{
