--- a/css/styles.css
+++ b/css/styles.css
@@ -668,7 +668,7 @@ header .menu-icon .section-title {
     padding: 20rem 30rem;
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: center;
     text-align: center;
 	row-gap: 2rem;
 	position: relative;
@@ -994,7 +994,7 @@ header .menu-icon .section-title {
     padding: 15rem 35rem 10rem;
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: center;
     text-align: center;
 	row-gap: 2rem;
 	color: #fff;
@@ -1240,7 +1240,7 @@ header .menu-icon .section-title {
 .about-third .about-third-text{
 	width: 100%;
     height: 100%;
-    padding: 15rem 50rem 0;
+    padding: 15rem 30rem 5rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -1416,7 +1416,7 @@ header .menu-icon .section-title {
     padding: 25rem 40rem;
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: center;
     text-align: center;
 	row-gap: 2rem;
 }
@@ -1513,6 +1513,8 @@ header .menu-icon .section-title {
 	border: 1px solid #000;
     border-radius: 50%;
 	background: #fff;
+	width: 150px;
+	height: 150px;
 }
 .services .services-text .services-more .service:hover{ 
 	transform: scale(1.2) !important;
@@ -1591,12 +1593,6 @@ header .menu-icon .section-title {
     font-size: 16px;
     font-weight: 800;
 }
-
-.services .services-text .services-more .service .circle{
-	width: 150px;
-	visibility: hidden;
-}
-
 .services .services-text .service-wrapper {
 	display: flex;
     justify-content: center;
@@ -1615,10 +1611,11 @@ header .menu-icon .section-title {
 }
 .team .team-text{
 	width: 100%;
-    padding: 5rem 40rem;
+	height: 100%;
+    padding: 5rem 30rem;
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: center;
     text-align: center;
 	row-gap: 1rem;
 }
@@ -1762,10 +1759,11 @@ header .menu-icon .section-title {
 }
 .work .work-text{
 	width: 100%;
-    padding: 5rem 40rem;
+	height: 100%;
+    padding: 5rem 30rem;
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: center;
     text-align: center;
 	row-gap: 2rem;
 }
@@ -2027,7 +2025,7 @@ header .menu-icon .section-title {
 .blog .blog-text{
 	width: 100%;
     height: 100%;
-    padding: 15rem 40rem 0;
+    padding: 15rem 30rem 5rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -2243,7 +2241,7 @@ header .menu-icon .section-title {
     padding: 20rem 36rem;
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: center;
     text-align: center;
 	row-gap: 2rem;
 }
@@ -2360,7 +2358,7 @@ header .menu-icon .section-title {
     padding: 20rem 36rem;
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: center;
     text-align: center;
 	row-gap: 2rem;
 	position: relative;
@@ -2779,6 +2777,10 @@ header .menu-icon .section-title {
 	.services .services-text h4{
 		font-size: 24px;
 	}
+	.services .services-text .services-more .service {
+		height: 120px;
+		width: 120px;
+	}
 	.service.first .icon{
 		position: absolute;
 		padding-top: 2rem;
@@ -2852,9 +2854,6 @@ header .menu-icon .section-title {
 		font-weight: 800;
 	}
 	
-	.services .services-text .services-more .service .circle{
-		width: 120px;
-	}
 	/*WORK*/
 	.work .work-text h1{
 		font-size: 40px;
@@ -3336,7 +3335,10 @@ header .menu-icon .section-title {
 		font-size: 18px;
     	line-height: normal;
 	}
-	
+	.services .services-text .services-more .service {
+		width: 100px;
+		height: 100px;
+	}
 	.service.first .icon{
 		position: absolute;
 		padding-top: 1rem;
@@ -3385,11 +3387,7 @@ header .menu-icon .section-title {
 	.service.six .service-text{
 		bottom: 2rem;
 		font-size: 10px;
-	}	
-	.services .services-text .services-more .service .circle{
-		width: 100px;
-	}
-	
+	}		
 	/*WORK*/
 	.work .work-text{
 		padding: 15rem 2rem;
